--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Black and White Spa</title>
     <!-- bootstrap css -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!-- css -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>   
@@ -22,7 +23,7 @@
                 <form action="http://localhost:3000/transformar" method="post">
                     <label for="urlImagen" class="form-label text-light">URL imagen: </label>
                     <input type="url" class="form-control" id="urlImagen" name="urlImagen" aria-describedby="imagenHelp" required>
-                    <div id="imagenHelp" class="form-text text-light">Comparte tu imagen para transformarla.</div>
+                    <div id="imagenHelp" class="form-text text-light">Comparte la url de tu imagen para transformarla.</div>
                     <button type="submit" class="btn btn-success">Transformar!</button>
                 </form> 
             </div>            
